sequestering more methods to binding, set address can update price

--- a/CryptoAddress/CryptoAddress/MainPage.xaml
+++ b/CryptoAddress/CryptoAddress/MainPage.xaml
@@ -112,7 +112,7 @@
                             <ImageButton 
                                 HorizontalOptions="Center" 
                                 VerticalOptions="Center" 
-                                
+                                Clicked="ImageButton_Clicked"
                                 ClassId="{Binding Id}" 
                                 Source="{Binding ImageFileUrl}" 
                                 
