--- a/CryptoAddress/CryptoAddress/App.xaml
+++ b/CryptoAddress/CryptoAddress/App.xaml
@@ -6,6 +6,32 @@
              mc:Ignorable="d"
              x:Class="CryptoAddress.App">
     <Application.Resources>
+        
+        <Style x:Key="LabelPageHeader" TargetType="Label">
+            <Setter Property="FontSize" Value="Large"/>
+            <Setter Property="FontAttributes" Value="Bold"/>
+            <Setter Property="HorizontalTextAlignment" Value="Center"/>
+            <Setter Property="VerticalTextAlignment" Value="Center"/>
+        </Style>
 
+        <Style x:Key="LabelSubHeader" TargetType="Label">
+            <Setter Property="FontSize" Value="Medium"/>
+            <Setter Property="FontAttributes" Value="Italic"/>
+            <Setter Property="HorizontalTextAlignment" Value="Center"/>
+            <Setter Property="VerticalTextAlignment" Value="Center"/>
+        </Style>
+
+        <Style x:Key="LabelNormal" TargetType="Label">
+            <Setter Property="FontSize" Value="Medium"/>
+            <Setter Property="HorizontalTextAlignment" Value="Center"/>
+            <Setter Property="VerticalTextAlignment" Value="Center"/>
+        </Style>
+
+        <Style x:Key="LabelSmall" TargetType="Label">
+            <Setter Property="FontSize" Value="Small"/>
+            <Setter Property="HorizontalTextAlignment" Value="Center"/>
+            <Setter Property="VerticalTextAlignment" Value="Center"/>
+        </Style>
+        
     </Application.Resources>
 </Application>
